--- a/src/components/TextBox/TextBox.css
+++ b/src/components/TextBox/TextBox.css
@@ -10,10 +10,12 @@
 
 .text-box input {
 background-color: #fff;
-box-shadow: 10px 10px rgb(0, 0,0, 0.06);
+box-sizing: border-box;
+box-shadow: 20px 10px 30px  rgba(0, 0,0, 0.06);
 width: 100%;
 border: none;
 font-size: 24px;
 padding: 24px;
-box-sizing: border-box;
+border-radius: 10px;
+
 }
